Mon Aug  5 17:14:45 2002  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/orbsvcs/SSLIOP/SSLIOP_Vault.cpp (make_X509):
	  (make_EVP_PKEY):

	  Added missing error checks.  Thanks to Dmitry Khrapov
	  <yavannadil@yahoo.com> for providing a patch.

Mon Aug  5 09:38:18 2002  Priyanka Gontla  <pgontla@ece.uci.edu>

        * orbsvcs/examples/PSS/Client.dsp:
	* orbsvcs/examples/PSS/Server.dsp:
	* orbsvcs/examples/PSS/Simple_Naming.dsp:
	* orbsvcs/examples/PSS/PSS.dsw:
          Updated the release configurations.

Mon Aug  5 07:23:10 2002  Priyanka Gontla  <pgontla@ece.uci.edu>

	* orbsvcs/PSS/PSDL_l.cpp: 
	  Fixed the warning in the Lynx build. Thanks to Bala for 
          showing it.

Sun Aug  4 14:38:14 2002  Priyanka Gontla <pggontla@ece.uci.edu>

        * orbsvcs/examples/PSS/Client.dsp:
	* orbsvcs/examples/PSS/Server.dsp:
	* orbsvcs/examples/PSS/Simple_Naming.dsp:
	* orbsvcs/examples/PSS/PSS.dsw:
	  Fixed and added the files back to the repo.

Sun Aug  4 13:30:41 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* performance-tests/Cubit/TAO/IDL_Cubit/svc.conf:
	* performance-tests/Cubit/TAO/IDL_Cubit/svc.zero_lock.conf:
	* performance-tests/Cubit/TAO/MT_Cubit/svc.conf:
	* tests/Collocation/svc.conf:
	* tests/OctetSeq/svc1.conf:
	* tests/OctetSeq/svc2.conf:
	* tests/Smart_Proxies/Collocation/svc.conf:
	* tests/Strategies/advanced_svc.conf:
	* tests/Strategies/svc.conf: Removed the usage of -ORBResources
	  option from all the above files since the option has been
	  deprecated. 

Sun Aug 04 09:56:29 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* docs/releasenotes/orbcore.html: Updated the release notes. Looks
	  like it was woefully out-of-date! Included some of the latest
	  concerns and plans in it. Need to make a pass again before the
	  beta goes out of the door.

Sun Aug  4 15:31:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Invocation.h:
        * tao/Service_Context.h:
        * tao/ValueBase.h:
        * tao/corbafwd.h: